...
                            .foregroundStyle(Color.black.opacity(0.9))
                    }
                    Spacer()
                    Button {
                        selectedTab = 1
                    } label: {
                        Label("List", systemImage: selectedTab == 1 ? "list.bullet.rectangle" : "list.bullet")
                            .foregroundStyle(Color.black.opacity(0.9))
                    }
                    Spacer()
                    Button {
                        selectedTab = 2
                    } label: {
                        Label("Saved", systemImage: selectedTab == 2 ? "star.fill" : "star")
                            .foregroundStyle(Color.black.opacity(0.9))
                    }
                }
            }
            .toolbarBackground(.ultraThinMaterial, for: .bottomBar)
            .toolbarBackgroundVisibility(.visible, for: .bottomBar)
...
